Closed Bug 1622542 Opened 6 years ago Closed 6 years ago

Unable to see or copy saved password if Windows account's password is empty

Categories

(Firefox :: about:logins, defect, P1)

76 Branch
Unspecified
Windows
defect

Tracking

()

VERIFIED FIXED
Firefox 76
Tracking Status
firefox-esr68 --- unaffected
firefox73 --- unaffected
firefox74 --- unaffected
firefox75 --- unaffected
firefox76 + verified

People

(Reporter: gelirhil, Assigned: jaws)

References

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:76.0) Gecko/20100101 Firefox/76.0

Steps to reproduce:

There're two Windows 10 OS accounts in the system. One is a local non-privileged user with empty password and another is an admin user with MS online account login. When clicking on eye icon or "copy" button to see/copy saved password in about:logins a Windows security window with "Verify your identity to reveal the saved password" message pops up.

Actual results:

While under non-privileged system user:
Empty password for non-privileged system user is declined, security window pops up again.
E-mail and password identities for admin system user is also declined, security window pops up again.

While under admin system user:
Identities for admin system user is correctly accepted, saved password is shown.
Empty password for non-privileged system user is declined, security window pops up again.

Expected results:

Security window must accept empty user password or shouldn't pop up at all if system user password is empty.

Bugbug thinks this bug should belong to this component, but please revert this change in case of error.

Component: Untriaged → Password Manager
Product: Firefox → Toolkit

Thanks for the report!

[Tracking Requested - why for this release]: New feature won't work for users without a Windows account password

Blocks: 1194529
Status: UNCONFIRMED → NEW
Ever confirmed: true
Flags: needinfo?(jaws)
Priority: -- → P1
Component: Password Manager → about:logins
Product: Toolkit → Firefox
Assignee: nobody → jaws
Status: NEW → ASSIGNED
Pushed by jwein@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/b50418331e04 Skip showing the credential UI for user accounts with a blank password. r=keeler
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 76

I have verified this issue and is no longer reproducible on Windows, the OS auth is no longer triggered if the no OS password is set. I have tested this issue using the latest Nightly 76.0a1 build (Build ID: 20200319215651) on Windows 10 x64, Windows 8.1 x64, Windows 7 x32, macOS 10.15.3 and macOS 10.14.6.

  • Unfortunately, this issue is still reproducible on macOS. I have logged this issue for macOS in bug 1623861.
Status: RESOLVED → VERIFIED
Flags: needinfo?(jaws)
OS: Unspecified → Windows
Summary: Unable to see or copy saved password if OS account's password is empty → Unable to see or copy saved password if Windows account's password is empty
Regressions: 1631879
Regressions: 1633090
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: