Bug 1622542 - Skip showing the credential UI for user accounts with a blank password. r=keeler

Differential Revision: https://phabricator.services.mozilla.com/D67242

--HG--
extra : moz-landing-system : lando